{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 118,
  "lineage": "1a3cf69f-0799-fc0d-f3af-bda61fbd9479",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d04992e2ae3f4b1",
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:elastic-ip/eipalloc-00d04992e2ae3f4b1",
            "association_id": "eipassoc-091e245df23a375af",
            "domain": "vpc",
            "id": "eipalloc-00d04992e2ae3f4b1",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08bc9988b36d9079c",
            "private_dns": "ip-10-10-1-166.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.166",
            "public_dns": "ec2-18-142-156-24.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.156.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-nat",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-nat",
              "Project": "ai-bill-splitter"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:internet-gateway/igw-000746fc89eea04c9",
            "id": "igw-000746fc89eea04c9",
            "owner_id": "323146837282",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            },
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d04992e2ae3f4b1",
            "association_id": "eipassoc-091e245df23a375af",
            "connectivity_type": "public",
            "id": "nat-0f196daa895257743",
            "network_interface_id": "eni-08bc9988b36d9079c",
            "private_ip": "10.10.1.166",
            "public_ip": "18.142.156.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d15031e1cc0bdb9",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            }
          },
          "dependencies": [
            "module.aws.aws_eip.nat",
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_subnet.public_a",
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:route-table/rtb-0512456d518217240",
            "id": "rtb-0512456d518217240",
            "owner_id": "323146837282",
            "propagating_vgws": [
              "vgw-05b80602a69705a6b"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f196daa895257743",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-05b80602a69705a6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private",
              "Project": "ai-bill-splitter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_eip.nat",
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_nat_gateway.main",
            "module.aws.aws_subnet.public_a",
            "module.aws.aws_vpc.main",
            "module.aws.aws_vpn_gateway.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:route-table/rtb-0ed0b03028e6e2b3c",
            "id": "rtb-0ed0b03028e6e2b3c",
            "owner_id": "323146837282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000746fc89eea04c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public",
              "Project": "ai-bill-splitter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016ad3fa44967907c",
            "route_table_id": "rtb-0512456d518217240",
            "subnet_id": "subnet-09935041c9000e766"
          },
          "dependencies": [
            "module.aws.aws_eip.nat",
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_nat_gateway.main",
            "module.aws.aws_route_table.private",
            "module.aws.aws_subnet.private_a",
            "module.aws.aws_subnet.public_a",
            "module.aws.aws_vpc.main",
            "module.aws.aws_vpn_gateway.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f932ccfccd32d189",
            "route_table_id": "rtb-0512456d518217240",
            "subnet_id": "subnet-0b712cf50a34eabfa"
          },
          "dependencies": [
            "module.aws.aws_eip.nat",
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_nat_gateway.main",
            "module.aws.aws_route_table.private",
            "module.aws.aws_subnet.private_b",
            "module.aws.aws_subnet.public_a",
            "module.aws.aws_vpc.main",
            "module.aws.aws_vpn_gateway.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5cb2f57b67ddd5",
            "route_table_id": "rtb-0ed0b03028e6e2b3c",
            "subnet_id": "subnet-08d15031e1cc0bdb9"
          },
          "dependencies": [
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_route_table.public",
            "module.aws.aws_subnet.public_a",
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea6e0cb4a6197f14",
            "route_table_id": "rtb-0ed0b03028e6e2b3c",
            "subnet_id": "subnet-0942246500636ecfd"
          },
          "dependencies": [
            "module.aws.aws_internet_gateway.main",
            "module.aws.aws_route_table.public",
            "module.aws.aws_subnet.public_b",
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:security-group/sg-0cd31bd474c30eb13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd31bd474c30eb13",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ai-bill-splitter-lambda-20260425104322632700000009",
            "name_prefix": "ai-bill-splitter-lambda-",
            "owner_id": "323146837282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-lambda",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-lambda",
              "Project": "ai-bill-splitter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:security-group/sg-0b25c8c938b74230f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b25c8c938b74230f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd31bd474c30eb13"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ai-bill-splitter-redis-2026042510432468240000000c",
            "name_prefix": "ai-bill-splitter-redis-",
            "owner_id": "323146837282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-redis",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-redis",
              "Project": "ai-bill-splitter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_security_group.lambda",
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:security-group/sg-022ef87c775c38140",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022ef87c775c38140",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ai-bill-splitter-vpn-2026042510432263330000000a",
            "name_prefix": "ai-bill-splitter-vpn-",
            "owner_id": "323146837282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-vpn",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-vpn",
              "Project": "ai-bill-splitter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:subnet/subnet-09935041c9000e766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09935041c9000e766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323146837282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private-a",
              "Project": "ai-bill-splitter",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private-a",
              "Project": "ai-bill-splitter",
              "Type": "private"
            },
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "dependencies": [
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:subnet/subnet-0b712cf50a34eabfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b712cf50a34eabfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323146837282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private-b",
              "Project": "ai-bill-splitter",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-private-b",
              "Project": "ai-bill-splitter",
              "Type": "private"
            },
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "dependencies": [
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:subnet/subnet-08d15031e1cc0bdb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d15031e1cc0bdb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323146837282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public-a",
              "Project": "ai-bill-splitter",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public-a",
              "Project": "ai-bill-splitter",
              "Type": "public"
            },
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "dependencies": [
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:subnet/subnet-0942246500636ecfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0942246500636ecfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "323146837282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public-b",
              "Project": "ai-bill-splitter",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-public-b",
              "Project": "ai-bill-splitter",
              "Type": "public"
            },
            "vpc_id": "vpc-0b219e7458d3af6e5"
          },
          "dependencies": [
            "module.aws.aws_vpc.main",
            "module.aws.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:323146837282:vpc/vpc-0b219e7458d3af6e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02fa6baa8a4db8071",
            "default_route_table_id": "rtb-09ffa781d4a8cd0b8",
            "default_security_group_id": "sg-09e6cf71c91b1a8d0",
            "dhcp_options_id": "dopt-03501c7db9693b8f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b219e7458d3af6e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ffa781d4a8cd0b8",
            "owner_id": "323146837282",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-bill-splitter-dev",
              "Project": "ai-bill-splitter"
            }
          }
        }
      ]
    }
  ]
}